feat: update config files

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
-FILM_KEY=
-FILM_POSTER=https://image.tmdb.org/t/p/original
-FILM_URL=https://api.themoviedb.org/3/
+COSMIC_KEY=
+COSMIC_SLUG=
 
 GOOGLE_ADSENSE=
 GOOGLE_ANALYTICS=
+
+SITE_URL=https://melquisedec.dev
