--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "refactor",
+  "name": "melquisedec.dev",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,14 +10,17 @@
     "lint:fix": "eslint --fix --ext .ts,.tsx ."
   },
   "dependencies": {
-    "axios": "^0.21.0",
+    "cosmicjs": "^3.4.0",
     "next": "9.5.2",
     "next-images": "^1.4.1",
     "next-offline": "^5.0.3",
     "next-pwa": "^3.1.5",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-icons": "^4.1.0",
+    "react-icons": "^4.2.0",
+    "react-markdown": "^5.0.3",
+    "react-responsive-masonry": "^2.1.1",
+    "react-share": "^4.3.1",
     "styled-components": "^5.1.1"
   },
   "devDependencies": {
