--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint:fix": "eslint --fix --ext .ts,.tsx ."
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "cosmicjs": "^3.4.0",
     "next": "9.5.2",
     "next-images": "^1.4.1",
@@ -17,6 +18,7 @@
     "next-pwa": "^3.1.5",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-emoji-render": "^1.2.4",
     "react-icons": "^4.2.0",
     "react-markdown": "^5.0.3",
     "react-responsive-masonry": "^2.1.1",
