feat: update manifest

--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,9 +1,9 @@
 {
-  "name": "Refactor",
-  "short_name": "Refactor",
-  "description": "Next seed app with typescript!",
-  "theme_color": "#05c46b",
-  "background_color": "#05c46b",
+  "name": "melquisedec.dev",
+  "short_name": "melquisedec.dev",
+  "description": "My personal site and future blog",
+  "theme_color": "#3742fa",
+  "background_color": "#3742fa",
   "display": "standalone",
   "scope": "/",
   "start_url": "/",
